changes for review comment

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
-.idea/
+.classpath
+.project
+.settings/
 target/
+out/
+.DS_Store
+test-output/
+*.iml
+.idea/
+doc/
+*.zip
+*-results.xml
+*.log
+*.txt
+*-all.xml
